# exepatch

./: CMakeLists.txt  README.md  make_3ps_exe.bat  make_3ps_exe.sh
src/: CMakeLists.txt  exepatch.cpp  patch.cpp  patch.h  utility.cpp  utility.h
src/res/: resource.h
