AUTO_FILES("." "src" "\\.(cpp|h)$")
if(WIN32)
  AUTO_FILES("res" "src" ".*")
endif()
include_directories(${COMMON_INCLUDE_DIR})
link_directories(${COMMON_LIBRARY_DIR})
if(WIN32)
  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
  set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} /MT")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
  set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /MT")
endif()
ADD_EXE(exepatch "${src}")
if(WIN32)
  target_link_libraries(exepatch libeay32)
else()
  target_link_libraries(exepatch crypto)
endif()
install(TARGETS exepatch DESTINATION bin)
